--- a/index.html
+++ b/index.html
@@ -24,5 +24,21 @@
         </p>
     </main>
 
+    <main class="css-card">
+    <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png" alt="CSS3 Logo" class="css-logo">
+    <h1 class="text-gradient-css">CSS3</h1>
+    <p class="hero-description">
+        <span class="accent-css">Cascading Style Sheets</span> is the design language of the web. It allows you to transform plain HTML into beautiful, responsive interfaces using layouts, colors, and animations.
+    </p>
+</main>
+
+<main class="github-card">
+    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Logo" class="github-logo">
+    <h1 class="text-gradient-github">GitHub</h1>
+    <p class="hero-description">
+        GitHub is the world's leading <span style="color: #8b5cf6; font-weight: bold;">AI-powered developer platform</span>. It hosts millions of projects, allowing teams to collaborate on code, track versions, and automate workflows.
+    </p>
+</main>
+
 </body>
 </html>
